# Array-List-Heap-implementation

./: CMakeLists.txt  Czas.cpp  Czas.h  Czasomierz.cpp  Czasomierz.h  ElementListy.cpp  ElementListy.h  Kopiec.cpp  Kopiec.h  Lista.cpp  Lista.h  Opcje.cpp  Opcje.h  README.md  Stary_Kopiec.cpp  Stary_Kopiec.h  Tablica.cpp  Tablica.h  Testy.cpp  Testy.h  TestyAutomatyczne.cpp  TestyAutomatyczne.h  heaper.cpp  heaper.h  heaper_B.cpp  heaper_B.h  main.cpp
